kubernetes/cluster/active/apps/metube/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: YouTube downloader (Web UI for yt-dlp).
    gethomepage.dev/group: Media
    gethomepage.dev/icon: metube.svg
    gethomepage.dev/name: MeTube
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=metube"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "metube.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: metube
          namespace: metube
          port: 10216
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 24h
